Added information about preparing to make your claim

--- a/process/preparing.html
+++ b/process/preparing.html
@@ -119,6 +119,96 @@
 					</div>
 				</div>
 			</div>
+			<section class="py-0" id="promotion-header">
+				<div class="bg-holder overlay overlay-z-index-1" style="background-image:url(/assets/img/headers/man-wearing-black-and-white-stripe-shirt-looking-at-white-212286.jpg);" data-zanim-xs='{"delay":0.4,"animation":"zoom-out"}' data-zanim-trigger="scroll"></div>
+				<!--/.bg-holder-->
+				<div class="container">
+					<div class="row min-vh-50 align-items-center py-9">
+						<div class="col" data-zanim-timeline='{"delay":0.4}' data-zanim-trigger="scroll">
+							<div class="overflow-hidden">
+								<h1 class="fs-4 fs-md-5 text-white display-4" data-zanim-xs='{"delay":0.1}'><i class="fal fa-map-marker-question"></i> Preparing to Make Your Claim</h1>
+							</div>
+							<div class="overflow-hidden">
+								<h4 class="font-weight-normal mb-4 text-300 mt-5" data-zanim-xs='{"delay":0.2}'>Preparing to make your claim can mean the difference between a successful refugee claim and being sent home. It is important to prepare and prepare well before your departure.</h4>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="py-0">
+				<div class="container-fluid">
+					<div class="row h-full border-bottom border-300">
+						<div class="col-lg-6 px-0 order-lg-2" data-zanim-lg='{"animation":"slide-left","delay":0.4}' data-zanim-trigger="scroll">
+							<div class="owl-carousel owl-theme owl-dots-inner owl-theme-white h-100" data-options='{"items":1,"autoplay":true,"loop":true,"autoplayHoverPause":true,"animateOut":"fadeOut","nav":true}' data-zanim-lg='{"animation":"zoom-out","delay":0}' data-zanim-trigger="scroll">
+								<div class="min-vh-lg-100 py-9">
+									<div class="bg-holder" style="background-image:url(/assets/img/headers/photo-of-a-person-s-hand-holding-a-maple-leaf-1563524.jpg);"></div>
+								</div>
+								<div class="min-vh-lg-100 py-9">
+									<div class="bg-holder" style="background-image:url(/assets/img/headers/brown-and-white-concrete-building-under-blue-sky-3656756.jpg);"></div>
+								</div>
+								<div class="min-vh-lg-100 py-9">
+									<div class="bg-holder" style="background-image:url(/assets/img/headers/businessman-busy-canada-daylight-624368.jpg);"></div>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-6 bg-white py-7 py-md-8">
+							<div class="row align-items-center justify-content-center h-100">
+								<div class="col-lg-10 text-black text-center text-lg-left" data-zanim-timeline="{}" data-zanim-trigger="scroll">
+									<div class="overflow-hidden"></div>
+									<div class="overflow-hidden"><h1 class="display-3 fs-5 fs-sm-6" data-zanim-xs='{"delay":0.2}'><span class="font-weight-light">Do </span><span class="text-underline">you</span><span class="font-weight-light"> need to flee the United States?</span></h1></div>
+									<div class="overflow-hidden">
+										<p class="text-900 fs-0 mt-3 mt-md-5" data-zanim-xs='{"delay":0.3}'>Human rights for transgender people are constantly under attack in the United States. The work of the Trump administration in recent years has shown the need for transgender people in the United States to be able to prepare to make refugee claims either now or when things become unbearable enough for them to live in the United States.</p>
+										<p class="text-900 fs-0 mt-3 mt-md-5" data-zanim-xs='{"delay":0.4}'>The purpose of this site is to help you determine if you might be better off filing a refugee claim in Canada as opposed to waiting for conditions to get better in the United States. The most important part of a successful refugee claim in Canada is proper preparation. It is easier to get documents and original materials while in the United States, and to develop a case that will help you remain safe in Canada.</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section id="default-services">
+				<div class="container">
+					<div class="row justify-content-center">
+						<div class="col-12 mb-5 mb-md-7 text-center"><h2 class="fs-3 fs-sm-4"><span class="text-underline">things you should know.</span></h2></div>
+						<div class="col-lg-5 pr-lg-4 mb-4">
+							<div class="media" data-zanim-timeline="{}" data-zanim-trigger="scroll">
+								<div class="overflow-hidden"><h1><i class="fal fa-leaf-maple"></i>&nbsp;&nbsp;&nbsp;&nbsp;</h1></div>
+								<div class="media-body">
+									<div class="overflow-hidden"><h4 class="mb-2" data-zanim-xs='{"delay":0.1,"animation":"slide-right"}'>You will need to remain in Canada while you await a decision</h4></div>
+									<div class="overflow-hidden"><p data-zanim-xs='{"delay":0.2,"animation":"slide-right"}'>While your claim is being heard, you cannot leave Canada. If you do leave Canada before a decision is made, your claim will be considered "abandoned", which has serious consequences. So, if you have any business that needs to be done that cannot be done in Canada, my suggestion is to get it done before you leave for Canada.</p></div>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-5 pr-lg-4 mb-4">
+							<div class="media" data-zanim-timeline="{}" data-zanim-trigger="scroll">
+								<div class="overflow-hidden"><h1><i class="fal fa-passport"></i>&nbsp;&nbsp;&nbsp;&nbsp;</h1></div>
+								<div class="media-body">
+									<div class="overflow-hidden"><h4 class="mb-2" data-zanim-xs='{"delay":0.1,"animation":"slide-right"}'>Your U.S. passport and all ID will be seized</h4></div>
+									<div class="overflow-hidden"><p data-zanim-xs='{"delay":0.2,"animation":"slide-right"}'>The CBSA will seize any U.S. passports in your possession, along with any state-issued ID. The rationale is that if your claim is successful, you will not be able to use these as doing so will be considered "availing yourself of the protection of the country you're requesting protection from", which is not permitted. If your claim is not successful, they'll also use these documents to remove you from Canada.</p></div>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-5 pr-lg-4 mb-4">
+							<div class="media" data-zanim-timeline="{}" data-zanim-trigger="scroll">
+								<div class="overflow-hidden"><h1><i class="fal fa-map-marked-alt"></i>&nbsp;&nbsp;&nbsp;</h1></div>
+								<div class="media-body">
+									<div class="overflow-hidden"><h4 class="mb-2" data-zanim-xs='{"delay":0.1,"animation":"slide-right"}'>Choose your port of entry well</h4></div>
+									<div class="overflow-hidden"><p data-zanim-xs='{"delay":0.2,"animation":"slide-right"}'>When you arrive in Canada, you'll most likely wish to make your claim immediately at a port of entry. It makes sense to choose one that will make it easier for you to live and for you to attend your hearing date. Cities with offices of the IRB include Vancouver, Montr&eacute;al, Toronto, Ottawa, and Calgary. Choosing any of these cities means you'll be living close to the office where your claim will be heard.</p></div>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-5 pr-lg-4 mb-4">
+							<div class="media" data-zanim-timeline="{}" data-zanim-trigger="scroll">
+								<div class="overflow-hidden"><h1><i class="fal fa-moon"></i>&nbsp;&nbsp;&nbsp;</h1></div>
+								<div class="media-body">
+									<div class="overflow-hidden"><h4 class="mb-2" data-zanim-xs='{"delay":0.1,"animation":"slide-right"}'>Plan to be in the airport overnight</h4></div>
+									<div class="overflow-hidden"><p data-zanim-xs='{"delay":0.2,"animation":"slide-right"}'>When I had my hearing, I arrived in Calgary at around noon and was released into Canada at around 11pm with an order to return to the CBSA office at the airport the next day. I would highly recommend that you plan to stay the night at a hotel near the airport so that you can be ready for this eventuality. Alternatively, you can plan to arrive in Canada early in the morning. Though, prepare to be in the airport for a long time.</p></div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 		<footer class="footer bg-black text-600 py-4 text-sans-serif text-center overflow-hidden" data-zanim-timeline="{}" data-zanim-trigger="scroll">
 			<div class="container">
@@ -129,18 +219,6 @@
 				</div>
 			</div>
 		</footer>
-		<div class="toast bg-dark text-white shadow-none notice" role="alert" data-options='{"autoShow":false,"showOnce":true,"cookieExpireTime":7200000}' data-autohide="false" aria-live="assertive" aria-atomic="true">
-			<div class="toast-body p-4">
-				<button class="close text-white text-shadow-none position-absolute t-0 r-0 p-2 mr-1 fs-1" type="button" data-dismiss="toast" aria-label="Close"><span aria-hidden="true">×</span></button>
-				<div class="media">
-					<img class="mr-3" src="/assets/img/icons/cookie-notice.png" width="50" alt="" />
-					<div class="media-body">
-						<p class="fs-0 ls text-sans-serif">Our site uses cookies. By continuing to use our site, you agree to our <a class="text-white text-underline" href="/components/sparrow/cookie-notice.html">Cookie Policy.</a></p>
-						<button class="btn btn-outline-light btn-sm text-uppercase border-700" type="button" data-dismiss="toast" aria-label="Close">Ok, I understand</button>
-					</div>
-				</div>
-			</div>
-		</div>
 		<script src="https://kit.fontawesome.com/7352655a15.js" crossorigin="anonymous"></script>
 		<script src="/assets/js/jquery.min.js"></script>
 		<script src="/assets/js/popper.min.js"></script>
