--- a/process/basis-of-claim.html
+++ b/process/basis-of-claim.html
@@ -120,8 +120,7 @@
 				</div>
 			</div>
 			<section class="py-0" id="promotion-header">
-				<div class="bg-holder overlay overlay-z-index-1" style="background-image:url(/assets/img/headers/irb-office.webp);" data-zanim-xs='{"delay":0.4,"animation":"zoom-out"}' data-zanim-trigger="scroll">
-				</div>
+				<div class="bg-holder overlay overlay-z-index-1" style="background-image:url(/assets/img/headers/irb-office.webp);" data-zanim-xs='{"delay":0.4,"animation":"zoom-out"}' data-zanim-trigger="scroll"></div>
 				<!--/.bg-holder-->
 				<div class="container">
 					<div class="row min-vh-50 align-items-center py-9">
@@ -130,7 +129,7 @@
 								<h1 class="fs-4 fs-md-5 text-white display-4" data-zanim-xs='{"delay":0.1}'><i class="fal fa-file-contract"></i> Filing Your Basis of Claim Form</h1>
 							</div>
 							<div class="overflow-hidden">
-								<h4 class="font-weight-normal mb-4 text-300 mt-5" data-zanim-xs='{"delay":0.2}'>Laying out your claim as well as you can within 15 days.</h4>
+								<h4 class="font-weight-normal mb-4 text-300 mt-5" data-zanim-xs='{"delay":0.2}'>Laying out your claim as well as you can within 15 days. If you filed at an airport, you were given a "Basis of Claim Form" from the Canada Border Services Agency once your claim was referred to the Immigration and Refugee Board. You have 15 days from the day your claim was referred to file with the IRB, regardless of whether or not it was filed on a weekend.</h4>
 							</div>
 						</div>
 					</div>
@@ -166,18 +165,6 @@
 				</div>
 			</div>
 		</footer>
-		<div class="toast bg-dark text-white shadow-none notice" role="alert" data-options='{"autoShow":false,"showOnce":true,"cookieExpireTime":7200000}' data-autohide="false" aria-live="assertive" aria-atomic="true">
-			<div class="toast-body p-4">
-				<button class="close text-white text-shadow-none position-absolute t-0 r-0 p-2 mr-1 fs-1" type="button" data-dismiss="toast" aria-label="Close"><span aria-hidden="true">×</span></button>
-				<div class="media">
-					<img class="mr-3" src="/assets/img/icons/cookie-notice.png" width="50" alt="" />
-					<div class="media-body">
-						<p class="fs-0 ls text-sans-serif">Our site uses cookies. By continuing to use our site, you agree to our <a class="text-white text-underline" href="/components/sparrow/cookie-notice.html">Cookie Policy.</a></p>
-						<button class="btn btn-outline-light btn-sm text-uppercase border-700" type="button" data-dismiss="toast" aria-label="Close">Ok, I understand</button>
-					</div>
-				</div>
-			</div>
-		</div>
 		<script src="https://kit.fontawesome.com/7352655a15.js" crossorigin="anonymous"></script>
 		<script src="/assets/js/jquery.min.js"></script>
 		<script src="/assets/js/popper.min.js"></script>
