Kicking off the NDP page

--- a/ndp.html
+++ b/ndp.html
@@ -119,6 +119,23 @@
 					</div>
 				</div>
 			</div>
+			<section class="py-0" id="promotion-header">
+				<div class="bg-holder overlay overlay-z-index-1" style="background-image:url(/assets/img/headers/batch-books-document-education-357514.jpg);" data-zanim-xs='{"delay":0.4,"animation":"zoom-out"}' data-zanim-trigger="scroll"></div>
+				<!--/.bg-holder-->
+				<div class="container">
+					<div class="row min-vh-50 align-items-center py-9">
+						<div class="col" data-zanim-timeline='{"delay":0.4}' data-zanim-trigger="scroll">
+							<div class="overflow-hidden">
+								<h1 class="fs-4 fs-md-5 text-white display-4" data-zanim-xs='{"delay":0.1}'><i class="fal fa-books"></i> The National Documentation Package and Country Conditions</h1>
+							</div>
+							<div class="overflow-hidden">
+								<h4 class="font-weight-normal mb-4 text-300 mt-5" data-zanim-xs='{"delay":0.2}'>Country conditions are an incredibly important part to proving your case and disproving the notion that the United States is a "safe" country. </h4>
+								<a href="https://irb-cisr.gc.ca/en/country-information/ndp/Pages/index.aspx?pid=10110" class="btn btn-primary btn-block"><i class="fal fa-books"></i> Read the National Documentation Package for the United States</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 		<footer class="footer bg-black text-600 py-4 text-sans-serif text-center overflow-hidden" data-zanim-timeline="{}" data-zanim-trigger="scroll">
 			<div class="container">
