Added some new information to the site.

--- a/elements/credibility.html
+++ b/elements/credibility.html
@@ -85,6 +85,7 @@
 							</div>
 						</div>
 					</li>
+					<li class="fancynav-item"><a class="fancynav-link" href="/how-to-help.html"><span class="fancynav-link-content">how you can help</span></a></li>
 					<li class="fancynav-item"><a class="fancynav-link" href="/gavin-seim/"><span class="fancynav-link-content">gavin seim</span></a></li>
 					<li class="fancynav-item fancy-dropdown">
 						<a class="fancynav-link fancy-dropdown-toggle" href="JavaScript:void(0)"><span class="fancynav-link-content">about</span></a>
