--- a/resources.html
+++ b/resources.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Filing an Appeal with the Refugee Appeal Division | The Process of Filing a Refugee Claim in Canada | Vero.moe</title>
+		<title>Resources and References | Vero.moe</title>
 
 		<link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicons/apple-touch-icon.png" />
 		<link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicons/favicon-32x32.png" />
@@ -121,6 +121,114 @@
 					</div>
 				</div>
 			</div>
+			<section class="py-0" id="promotion-header">
+				<div class="bg-holder overlay overlay-z-index-1" style="background-image:url(/assets/img/headers/batch-books-document-education-357514.jpg);" data-zanim-xs='{"delay":0.4,"animation":"zoom-out"}' data-zanim-trigger="scroll"></div>
+				<!--/.bg-holder-->
+				<div class="container">
+					<div class="row min-vh-50 align-items-center py-9">
+						<div class="col" data-zanim-timeline='{"delay":0.4}' data-zanim-trigger="scroll">
+							<div class="overflow-hidden">
+								<h1 class="fs-4 fs-md-5 text-white display-4" data-zanim-xs='{"delay":0.1}'><i class="fal fa-books"></i> Resources &amp; References</h1>
+							</div>
+							<div class="overflow-hidden">
+								<h4 class="font-weight-normal mb-4 text-300 mt-5" data-zanim-xs='{"delay":0.2}'>Information cited in my claim and resources you can access in Canada.</h4>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section>
+				<div class="container">
+					<div class="row">
+						<div class="col-lg-12">
+							<div class="row">
+								<div class="col-12">
+									<h2 class="mt-4">Resources</h2>
+									<p class="mt-4">.</p>
+									<h3 class="mt-4">Federal</h3>
+									<div class="ui styled fluid accordion mt-4" data-options='{"exclusive":false}'>
+										<div class="active title">
+											<i class="dropdown icon"></i>
+											<h5 class="d-inline-block fs-0">What is a dog?</h5>
+										</div>
+										<div class="active content">
+											<p>A dog is a type of domesticated animal. Known for its loyalty and faithfulness, it can be found as a welcome guest in many households across the world.</p>
+										</div>
+										<div class="title">
+											<i class="dropdown icon"></i>
+											<h5 class="d-inline-block fs-0">What kinds of dogs are there?</h5>
+										</div>
+										<div class="content">
+											<p>There are many breeds of dogs. Each breed varies in size and temperament. Owners often select a breed of dog that they find to be compatible with their own lifestyle and desires from a companion.</p>
+										</div>
+										<div class="title">
+											<i class="dropdown icon"></i>
+											<h5 class="d-inline-block fs-0">How do you acquire a dog?</h5>
+										</div>
+										<div class="content">
+											<p>Three common ways for a prospective owner to acquire a dog is from pet shops, private owners, or shelters.</p>
+											<p>A pet shop may be the most convenient way to buy a dog. Buying a dog from a private owner allows you to assess the pedigree and upbringing of your dog before choosing to take it home. Lastly, finding your dog from a shelter, helps give
+											a good home to a dog who may not find one so readily.</p>
+										</div>
+									</div>
+									<h3 class="mt-4">Alberta</h3>
+									<div class="ui styled fluid accordion mt-4" data-options='{"exclusive":false}'>
+										<div class="active title">
+											<i class="dropdown icon"></i>
+											<h5 class="d-inline-block fs-0">Province-wide</h5>
+										</div>
+										<div class="active content">
+											<p>A dog is a type of domesticated animal. Known for its loyalty and faithfulness, it can be found as a welcome guest in many households across the world.</p>
+										</div>
+										<div class="title">
+											<i class="dropdown icon"></i>
+											<h5 class="d-inline-block fs-0">Calgary</h5>
+										</div>
+										<div class="content">
+											<ul>
+												<li><a href="https://1000voices.ca"><strong>1,000 Voices</strong></a> — 7556 Falconridge Blvd NE - (403) 930-3370</li>
+												<li><a href="https://actiondignity.org"><strong>ActionDignity</strong></a> — 915 33 Street NE - (403) 263-9900</li>
+												<li><a href="https://ccisab.ca"><strong>Calgary Catholic Immigration Society</strong></a> — 1111 11 Ave SW - (403) 262-2006</li>
+												<li><a href="https://ciwa-online.com"><strong>Calgary Immigrant Women’s Association</strong></a> - 138 4 Ave SE, Suite 200 - (403) 263-4414</li>
+												<li><a href="https://clg.ab.ca"><strong>Calgary Legal Guidance</strong></a> — 840 - 7th Avenue SW, Suite 100 - (403) 234-9266</li>
+												<li><a href="https://canaf-calgary.ca"><strong>Centre d’Accueil Pour Les Nouveaux Arrivants Francophones</strong></a> - 840 7 Ave SW, Suite 1601 - (403) 532-6334</li>
+												<li>Centre for Newcomers - </li>
+												<li><a href="https://www.calgary.ca/content/dam/www/csps/cns/documents/immigrants-newcomers-refugees/newcomers-guide-english.pdf"><strong>The Newcomers Guide to Calgary</strong></a> — Published by the City of Calgary</li>
+												<li><a href="https://slacalgary.com"><strong>University of Calgary Student Legal Assistance</strong></a> — 3390 Murray Fraser Hall - <a href="tel:+1-403-220-6637">(403) 220-6637</li>
+											</ul>
+										</div>
+										<div class="title">
+											<i class="dropdown icon"></i>
+											<h5 class="d-inline-block fs-0">Edmonton</h5>
+										</div>
+										<div class="content">
+											<ul>
+												<li><a href="https://eclc.ca"><strong>Edmonton Community Legal Centre</strong></a> — 10020 100 Street, Second floor - (780) 702-1725</li>
+												<li><a href="https://eisa-edmonton.org"><strong>Edmonton Immigrant Services Association</strong></a> — 10720 113 Street, Suite 201 - (780) 474-8445</li>
+											</ul>
+										</div>
+									</div>
+									<h3 class="mt-4">British Columbia</h3>
+									<h3 class="mt-4">Manitoba</h3>
+									<h3 class="mt-4">Newfoundland and Labrador</h3>
+									<h3 class="mt-4">Northwest Territories</h3>
+									<h3 class="mt-4">Nova Scotia</h3>
+									<h3 class="mt-4">Nunavut</h3>
+									<h3 class="mt-4">Ontario</h3>
+									<h3 class="mt-4">Prince Edward Island</h3>
+									<h3 class="mt-4">Québec</h3>
+									<h3 class="mt-4">Saskatchewan</h3>
+									<h3 class="mt-4">Yukon Territories</h3>
+									
+									<h2 class="mt-4">References</h2>
+									<p class="mt-4">Alexander, R. (2013, November). <a href="https://www.researchgate.net/publication/294425859_Transgendered_Prisoners_in_the_United_States_A_Progression_of_Laws">Transgendered Prisoners in the United States: A Progression of Laws</a>. <em>Laws</em>, 2(4), 428-439. doi:10.3390/laws2040428</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- end of .container-->
+			</section>
 		</main>
 		<footer class="footer bg-black text-600 py-4 text-sans-serif text-center overflow-hidden" data-zanim-timeline="{}" data-zanim-trigger="scroll">
 			<div class="container">
@@ -131,18 +239,6 @@
 				</div>
 			</div>
 		</footer>
-		<div class="toast bg-dark text-white shadow-none notice" role="alert" data-options='{"autoShow":false,"showOnce":true,"cookieExpireTime":7200000}' data-autohide="false" aria-live="assertive" aria-atomic="true">
-			<div class="toast-body p-4">
-				<button class="close text-white text-shadow-none position-absolute t-0 r-0 p-2 mr-1 fs-1" type="button" data-dismiss="toast" aria-label="Close"><span aria-hidden="true">×</span></button>
-				<div class="media">
-					<img class="mr-3" src="/assets/img/icons/cookie-notice.png" width="50" alt="" />
-					<div class="media-body">
-						<p class="fs-0 ls text-sans-serif">Our site uses cookies. By continuing to use our site, you agree to our <a class="text-white text-underline" href="/components/sparrow/cookie-notice.html">Cookie Policy.</a></p>
-						<button class="btn btn-outline-light btn-sm text-uppercase border-700" type="button" data-dismiss="toast" aria-label="Close">Ok, I understand</button>
-					</div>
-				</div>
-			</div>
-		</div>
 		<script src="https://kit.fontawesome.com/7352655a15.js" crossorigin="anonymous"></script>
 		<script src="/assets/js/jquery.min.js"></script>
 		<script src="/assets/js/popper.min.js"></script>
