--- a/changelog.html
+++ b/changelog.html
@@ -100,6 +100,7 @@
 									<a class="fancy-dropdown-item" href="/support.html">Support My Noble Efforts</a>
 								</div>
 								<div class="col-sm-auto pr-4">
+									<a class="fancy-dropdown-item" href="/resources.html">References &amp; Resources</a>
 									<a class="fancy-dropdown-item" href="https://github.com/kawaiidesune/kawaiidesune.github.io"><i class="fab fa-github"></i> Repository for this Site</a>
 								</div>
 							</div>
@@ -135,7 +136,7 @@
 									<div class="overflow-hidden"><h4 class="text-uppercase font-weight-normal ls text-white bg-dark p-1 rounded d-inline-block" data-zanim-xs='{"delay":0.1}'>Refugee Claimant from the USA</h4></div>
 									<div class="overflow-hidden"><h1 class="display-3 fs-5 fs-sm-6" data-zanim-xs='{"delay":0.2}'><span class="font-weight-light">changelog</span></h1></div>
 									<div class="overflow-hidden">
-										<p class="text-900 fs-0 mt-3 mt-md-5" data-zanim-xs='{"delay":0.3}'>The latest update to this website is on the <strong>12th of June 2020</strong>. These updates include the shell of the elements of a refugee claim, which should be updated by the end of the weekend.</p>
+										<p class="text-900 fs-0 mt-3 mt-md-5" data-zanim-xs='{"delay":0.3}'>The latest update to this website is on the <strong>8th of April 2021</strong>. These updates include the shell of the elements of a refugee claim, which should be updated by the end of the weekend.</p>
 									</div>
 								</div>
 							</div>
@@ -148,7 +149,7 @@
 			<div class="container">
 				<div class="row align-items-center">
 					<div class="col-lg-4 order-lg-2"><a class="indicator indicator-up" href="#top" data-fancyscroll="data-fancyscroll"><span class="indicator-arrow indicator-arrow-one" data-zanim-xs='{"from":{"opacity":0,"y":15},"to":{"opacity":1,"y":-5,"scale":1},"ease":"Back.easeOut","duration":0.4,"delay":0.9}'></span><span class="indicator-arrow indicator-arrow-two" data-zanim-xs='{"from":{"opacity":0,"y":15},"to":{"opacity":1,"y":-5,"scale":1},"ease":"Back.easeOut","duration":0.4,"delay":1.05}'></span></a></div>
-					<div class="col-lg-4 text-lg-left mt-4 mt-lg-0"><p class="fs--1 text-uppercase ls font-weight-bold mb-0" xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#">&copy; 2020 <a rel="cc:attributionURL" href="https://vero.moe"><span rel="cc:attributionName">Véronique Bellamy</span></a>.</p></div>
+					<div class="col-lg-4 text-lg-left mt-4 mt-lg-0"><p class="fs--1 text-uppercase ls font-weight-bold mb-0" xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#">&copy; 2020-2021 <a rel="cc:attributionURL" href="https://vero.moe"><span rel="cc:attributionName">Véronique Bellamy</span></a>.</p></div>
 					<div class="col-lg-4 text-lg-right order-lg-2 mt-2 mt-lg-0"><p class="fs--1 text-uppercase ls font-weight-bold mb-0"><a href="https://creativecommons.org/licenses/by-sa/4.0">Some rights reserved. <i class="fab fa-creative-commons"></i> <i class="fab fa-creative-commons-by"></i> <i class="fab fa-creative-commons-sa"></i></a></p></div>
 				</div>
 			</div>
